WZ: fix flickering while reloading the image
Due to NGE's site being slow preload new maps before being displayed,
and use a blurry map as a place holder.

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ h1 {
 }
 #wz-map img {
 	max-width: 100%;
-	width: 500px;
+	height: 500px;
 }
 .wz-icon {
 	padding: 0;
